--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
 <input type="text" [(ngModel)]="usuario.email" placeholder="tu usuario">
 <input type="text" [(ngModel)]="usuario.password" placeholder="tu password">
 <button (click)="guardar()">Ingresar</button>
-
+{{estatus.mensaje}}
 <router-outlet></router-outlet>
